log
Sat 18 May 2024 07:35:08 PM UTC: 
 tests:  0|5
total_score: 0/70
c82b857
Sun 19 May 2024 02:19:22 AM UTC: 
 sudoku.c | 67 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 66 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:23: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   48 |    int fila [10]; int columna [10]; int aux [10];
      |                       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2639007
Sun 19 May 2024 02:19:36 AM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:8: error: variable ‘columna’ set but not used [-Werror=unused-but-set-variable]
   49 |    int columna [10];
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b51ea2
